separate the input stream into a separate class